--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@
                 </div>
               </div>
             </div>
+            
           </div>
         </div>
       </section>
@@ -604,7 +605,7 @@ scrollTopBtn.addEventListener("click", () => {
 
     // Typed effect sederhana
     const typedEl = document.getElementById('typed');
-    const words = ['Frontend Developer', 'UI/UX Enthusiast', 'Web Designer'];
+    const words = ['Orang ganteng😎', 'Frontend Developer', 'UI/UX Enthusiast', 'Web Designer'];
     let wi = 0, li = 0, dir = 1;
     function typeLoop(){
       const w = words[wi];
